[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://ui/settings_menu.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
bg_color = Color(0.12, 0.28, 0.1, 0.92)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.65, 0.25, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
content_margin_left = 16.0
content_margin_top = 6.0
content_margin_right = 16.0
content_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.18, 0.45, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.45, 0.85, 0.35, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
content_margin_left = 16.0
content_margin_top = 6.0
content_margin_right = 16.0
content_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel_bg"]
bg_color = Color(0.06, 0.12, 0.05, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
content_margin_left = 24.0
content_margin_top = 16.0
content_margin_right = 24.0
content_margin_bottom = 16.0

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.08, 0.03, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderRow"]
layout_mode = 2
custom_minimum_size = Vector2(100, 40)
theme_override_colors/font_color = Color(0.7, 0.8, 0.65, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_hover")
text = "< BACK"

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.78, 0.25, 1)
theme_override_font_sizes/font_size = 42
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HeaderRow"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(500, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_panel_bg")

[node name="SettingsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="AudioTitle" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "Audio"

[node name="MasterVolumeRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox/MasterVolumeRow"]
layout_mode = 2
custom_minimum_size = Vector2(160, 0)
theme_override_colors/font_color = Color(0.75, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox/MasterVolumeRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="MasterValue" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox/MasterVolumeRow"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
theme_override_colors/font_color = Color(0.6, 0.7, 0.55, 0.8)
theme_override_font_sizes/font_size = 14
text = "100%"
horizontal_alignment = 2

[node name="SFXVolumeRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox/SFXVolumeRow"]
layout_mode = 2
custom_minimum_size = Vector2(160, 0)
theme_override_colors/font_color = Color(0.75, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox/SFXVolumeRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXValue" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox/SFXVolumeRow"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
theme_override_colors/font_color = Color(0.6, 0.7, 0.55, 0.8)
theme_override_font_sizes/font_size = 14
text = "100%"
horizontal_alignment = 2

[node name="Separator1" type="HSeparator" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox"]
layout_mode = 2
theme_override_colors/separator_color = Color(0.3, 0.5, 0.25, 0.4)

[node name="ControlsTitle" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "Controls"

[node name="SensitivityRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox/SensitivityRow"]
layout_mode = 2
custom_minimum_size = Vector2(160, 0)
theme_override_colors/font_color = Color(0.75, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Mouse Sensitivity"

[node name="SensSlider" type="HSlider" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox/SensitivityRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.05
max_value = 1.0
step = 0.05
value = 0.5

[node name="SensValue" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox/SensitivityRow"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
theme_override_colors/font_color = Color(0.6, 0.7, 0.55, 0.8)
theme_override_font_sizes/font_size = 14
text = "50%"
horizontal_alignment = 2

[node name="Separator2" type="HSeparator" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox"]
layout_mode = 2
theme_override_colors/separator_color = Color(0.3, 0.5, 0.25, 0.4)

[node name="DisplayTitle" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "Display"

[node name="FullscreenToggle" type="CheckBox" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "  Fullscreen"

[node name="VSyncToggle" type="CheckBox" parent="MarginContainer/VBoxContainer/CenterContainer/SettingsPanel/SettingsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 16
button_pressed = true
text = "  V-Sync"

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(200, 45)
theme_override_colors/font_color = Color(0.9, 0.95, 0.85, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_hover")
text = "APPLY"
